updated swagger and auth middleware, along with this tested sso login
