# src/app.ts
@@ -1,16 +1,13 @@
-import express, { Application, Request, Response, NextFunction, json } from 'express';
+import express, { Request, Response, NextFunction, json } from 'express';
 import cors from 'cors';
 import helmet from 'helmet';
 import morgan from 'morgan';
 import passport from 'passport';
 import { serve, setup } from 'swagger-ui-express';
 import swaggerDocument from './swagger.json';
-
+import authMiddleware from './middleware/auth.middleware';
 import connectDB from './config/database';
-import redis from './config/redis';
-
 import logger from './utils/logger';
-
 // Import routes
 import authRoutes from './routes/auth.routes';
 import urlRoutes from './routes/url.routes';
@@ -19,7 +16,6 @@ import analyticsRoutes from './routes/analytics.routes';
 // Initialize app
 const app = express();
 
-logger.info('Initializing')
 // Connect to the databases
 const connectServices = async () => {
   try {
@@ -48,6 +44,19 @@ app.use('/api/auth', authRoutes);
 app.use('/api/urls', urlRoutes);
 app.use('/api/analytics', analyticsRoutes);
 app.use('/api-docs', serve, setup(swaggerDocument));
+
+// Basic routes so keeping it here
+app.get('/', (req, res) => {
+  res.send(`<h1>Welcome to the app!</h1><a href="/api/auth/google">Login with Google</a>`);
+});
+
+app.get('/profile', authMiddleware, (req: any, res) => {
+  if (req.isAuthenticated()) {
+    res.send(`<h1>Hello, ${req?.user?.name}</h1><p>Email: ${req?.user?.email}</p>`);
+  } else {
+    res.redirect('/');
+  }
+});
 
 // Error handling middleware
 app.use((err: any, req: Request, res: Response, next: NextFunction): void => {
